--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
+   "homepage": "https://ensiehasanaki.github.io/tic-tac-toe",
+	"main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
